fix spacing

--- a/style.css
+++ b/style.css
@@ -5,3 +5,6 @@
     max-width: 100%;
 }
 
+.hlb-open {
+    margin-top: 1rem;
+}
